--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.1"
+        "@vitejs/plugin-vue": "^4.3.4",
+        "bootstrap": "^5.3.1",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.2.2"
     }
 }
